# simple-redis-clone

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  sonar-project.properties
cmake_modules/: code-coverage.cmake
include/data/: data.h
include/doublell/: doublell.h
include/keyValue/: keyValue.h
include/murmurhash/: murmurhash.h
include/parseInput/: parseInput.h
include/sds/: sds.h
include/server/: server.h
include/sharedData/: sharedData.h
src/: CMakeLists.txt  client.c  main.c
src/data/: data.c
src/doublell/: doublell.c
src/keyValue/: keyValue.c
src/murmurhash/: murmurhash.c
src/parseInput/: parseInput.c
src/server/: server.c
src/sharedData/: sharedData.c
test/: CMakeLists.txt  CmakeLists.txt  test.c
