# include_directories(${PROJECT_SOURCE_DIR}/include/server)
# include_directories(${PROJECT_SOURCE_DIR}/include/sds)
# include_directories(${PROJECT_SOURCE_DIR}/include/murmurhash)
# include_directories(${PROJECT_SOURCE_DIR}/include/data)
add_library(server-lib STATIC ${PROJECT_SOURCE_DIR}/src/server/server.c)
add_library(data-lib STATIC ${PROJECT_SOURCE_DIR}/src/data/data.c)
add_library(murmurhash-lib STATIC ${PROJECT_SOURCE_DIR}/src/murmurhash/murmurhash.c)
add_library(sds-lib STATIC ${PROJECT_SOURCE_DIR}/src/sds/sds.c)

target_include_directories(server-lib PUBLIC ${PROJECT_SOURCE_DIR}/include/server)
target_include_directories(data-lib PUBLIC ${PROJECT_SOURCE_DIR}/include/data)
target_include_directories(murmurhash-lib PUBLIC ${PROJECT_SOURCE_DIR}/include/murmurhash)
target_include_directories(sds-lib PUBLIC ${PROJECT_SOURCE_DIR}/include/sds)

add_executable(simple-key-value-database-binary main.c)
# target_link_libraries(server-lib PRIVATE murmurhash-lib)
target_link_libraries(simple-key-value-database-binary PRIVATE server-lib PRIVATE data-lib PRIVATE murmurhash-lib PRIVATE sds-lib)