# include_directories(${PROJECT_SOURCE_DIR}/include/server)
# include_directories(${PROJECT_SOURCE_DIR}/include/sds)
# include_directories(${PROJECT_SOURCE_DIR}/include/murmurhash)
# include_directories(${PROJECT_SOURCE_DIR}/include/data)
add_library(server-lib STATIC ${PROJECT_SOURCE_DIR}/src/server/server.c)
add_library(keyValue-lib STATIC ${PROJECT_SOURCE_DIR}/src/keyValue/keyValue.c)
add_library(murmurhash-lib STATIC ${PROJECT_SOURCE_DIR}/src/murmurhash/murmurhash.c)
add_library(sds-lib STATIC ${PROJECT_SOURCE_DIR}/src/sds/sds.c)
add_library(parseInput-lib STATIC ${PROJECT_SOURCE_DIR}/src/parseInput/parseInput.c)
add_library(sharedData-lib STATIC ${PROJECT_SOURCE_DIR}/src/sharedData/sharedData.c)

target_include_directories(server-lib PUBLIC ${PROJECT_SOURCE_DIR}/include/server)
target_include_directories(keyValue-lib PUBLIC ${PROJECT_SOURCE_DIR}/include/keyValue)
target_include_directories(murmurhash-lib PUBLIC ${PROJECT_SOURCE_DIR}/include/murmurhash)
target_include_directories(sds-lib PUBLIC ${PROJECT_SOURCE_DIR}/include/sds)
target_include_directories(parseInput-lib PUBLIC ${PROJECT_SOURCE_DIR}/include/parseInput)
target_include_directories(sharedData-lib PUBLIC ${PROJECT_SOURCE_DIR}/include/sharedData)

add_executable(simple-key-value-database-binary main.c)
# target_link_libraries(server-lib PRIVATE murmurhash-lib)
# target_link_libraries(simple-key-value-database-binary PRIVATE server-lib PRIVATE data-lib PRIVATE murmurhash-lib PRIVATE sds-lib PRIVATE parseInput-lib)
target_link_libraries(sharedData-lib PRIVATE murmurhash-lib PRIVATE sds-lib)
target_link_libraries(keyValue-lib PRIVATE sharedData-lib)
target_link_libraries(server-lib PRIVATE parseInput-lib PRIVATE sharedData-lib)
target_link_libraries(parseInput-lib PRIVATE keyValue-lib)
target_link_libraries(simple-key-value-database-binary PRIVATE server-lib)
